--- a/packages/google_maps_flutter/google_maps_flutter/example/web/index.html
+++ b/packages/google_maps_flutter/google_maps_flutter/example/web/index.html
@@ -33,7 +33,7 @@
   <link rel="manifest" href="manifest.json">
 
     <!-- Update this value to your google maps api key. -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=${mapsApiKey}&libraries=geometry,visualization"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=${mapsApiKey}&libraries=visualization"></script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
